# spacermake

./: .gitmodules  Cargo.toml  build.rs  fabfire.toml  master-slave_relations.toml  spacermake.toml
fabaccess-api/: .gitignore  LICENSE  README.md  authenticationsystem.capnp  connection.capnp  general.capnp  machine.capnp  machinesystem.capnp  permissionsystem.capnp  role.capnp  space.capnp  user.capnp  usersystem.capnp
src/: accounting.rs  config.rs  logs.rs  machine.rs  main.rs  mqtt.rs  my_config.rs  schema.rs  settings.rs  state.rs  utils.rs  web.rs
src/accounting/: dependencies.rs  runtime_display.rs
src/accounting/dependencies/: shutdown.rs
src/config/: slave.rs
src/mqtt/: read.rs  write.rs
src/state/: announcer.rs  listener.rs
src/utils/: booking.rs  index.rs  logs.rs
src/utils/logs/: billing.rs
src/web/: fab_api.rs  model.rs  page.rs
src/web/fab_api/: object.rs
src/web/page/: debug.rs  error.rs  overview.rs  resource.rs
www/: style.css
