[package]
name = "spacermake"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# paho-mqtt = { version = "0.12.3", default-features=false, features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync"] }
rumqttc = "0.24"
json = "0.12"
boolinator = "2"
itertools = "0.14"
csv = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
tap = "1"
toml = "0.8"
futures = "0.3"
colour = "2"
config = { version = "0.15", features = ["toml"] }
